--- a/index.html
+++ b/index.html
@@ -1,89 +1,5 @@
+
 <!DOCTYPE html>
-<html lang="es">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Descarga tu Kit de Infografías para Farmacias</title>
-  <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    }
-    body {
-      background: linear-gradient(135deg, #f5f7fa 0%, #e4edf9 100%);
-      color: #333;
-      padding: 20px;
-      min-height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-    .container {
-      max-width: 600px;
-      width: 100%;
-      background: white;
-      border-radius: 16px;
-      box-shadow: 0 8px 30px rgba(0,0,0,0.1);
-      padding: 40px;
-      text-align: center;
-    }
-    h1 {
-      font-size: 28px;
-      margin-bottom: 20px;
-      color: #2c3e50;
-    }
-    p {
-      margin: 12px 0 24px;
-      line-height: 1.6;
-      color: #555;
-    }
-    .features {
-      background: #f8fbff;
-      padding: 20px;
-      border-radius: 12px;
-      margin: 25px 0;
-      text-align: left;
-    }
-    .features h3 {
-      margin-bottom: 12px;
-      color: #2980b9;
-    }
-    .features ul {
-      padding-left: 20px;
-    }
-    .features li {
-      margin-bottom: 8px;
-    }
-    input {
-      width: 100%;
-      padding: 14px;
-      margin: 10px 0;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      font-size: 16px;
-    }
-    button {
-      background: #3498db;
-      color: white;
-      border: none;
-      padding: 16px 24px;
-      font-size: 18px;
-      border-radius: 8px;
-      cursor: pointer;
-      width: 100%;
-      margin-top: 10px;
-      transition: background 0.3s;
-    }
-    button:hover {
-      background: #2980b9;
-    }
-    .thank-you {
-      display: none;
-    }
-    .thank-you h2 {
-      color: #27ae60;
     }
     .thank-you p {
       margin-top: 15px;
@@ -115,9 +31,9 @@
       </div>
 
       <form id="lead-form">
-        <input type="text" id="fullname" placeholder="Nombre completo" required />
-        <input type="text" id="pharmacy" placeholder="Nombre de la farmacia" required />
-        <input type="email" id="email" placeholder="Correo electrónico" required />
+        <input type="text" name="fullname" placeholder="Nombre completo" required />
+        <input type="text" name="pharmacy" placeholder="Nombre de la farmacia" required />
+        <input type="email" name="email" placeholder="Correo electrónico" required />
         <button type="submit">Descargar Kit Ahora</button>
       </form>
     </div>
@@ -130,23 +46,32 @@
   </div>
 
   <script>
+    // 🔑 PEGA AQUÍ LA URL DE TU APPS SCRIPT (del Paso 2)
+    const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbzhYPdXsDtVRwtUikW01wC3UEEjdf2aeHipo4PcwlVRR9VVT-UbNrO0c_wZ_p6deCGD/exec";
+
     document.getElementById('lead-form').addEventListener('submit', function(e) {
       e.preventDefault();
 
-      const fullname = document.getElementById('fullname').value.trim();
-      const pharmacy = document.getElementById('pharmacy').value.trim();
-      const email = document.getElementById('email').value.trim();
+      const form = e.target;
+      const formData = new FormData(form);
 
-      if (fullname && pharmacy && email) {
+      // Envía los datos a Google Apps Script
+      fetch(SCRIPT_URL, {
+        method: 'POST',
+        mode: 'no-cors', // Obligatorio para Google
+        body: formData
+      }).then(() => {
+        // Muestra mensaje de agradecimiento
         document.getElementById('form-section').style.display = 'none';
         document.getElementById('thank-you').style.display = 'block';
 
+        // Abre el Drive después de 2 segundos
         setTimeout(() => {
           window.open('https://drive.google.com/file/d/17aHLIltE5iadMeec-Qot060w9UYIQsWb/view?usp=drive_link', '_blank');
         }, 2000);
-      } else {
-        alert('Por favor, completa todos los campos.');
-      }
+      }).catch(() => {
+        alert('Hubo un error. Por favor, inténtalo de nuevo.');
+      });
     });
   </script>
 </body>
